--- a/Projects.qmd
+++ b/Projects.qmd
@@ -9,8 +9,14 @@ listing:
     filter-ui: true
     categories: false
 ---
-## project 1
-here is my [project 1](projects/project1.qmd)
+::: project-listings
+:::
+
+## Project 1
+
+Here is my [project 1](projects/project1.html)
+Here is my [project 2](projects/project2.html)
+
 
 
 
