--- a/Projects.qmd
+++ b/Projects.qmd
@@ -5,7 +5,7 @@ page-layout: full
 listing:
   - id: project-listings
     contents: "Projects/*.qmd"
-    type: grid
+    type: default
     sort: false
     sort-ui: false
     filter-ui: true
