--- a/Projects/Metal.qmd
+++ b/Projects/Metal.qmd
@@ -1,12 +1,16 @@
 ---
-title: "***"
-subtitle: "***"
-authors: "***"
+title: "Metal-Organic Frameworks in Bone Regeneration"
+subtitle: "01/01/2024"
+authors: "Mahsa Ghovvati, Keivan Bolouri, Naoki Kaneko, Ehsan Nazarzadeh Zare"
 image: "Images/Me.jpg"  # for listings
 ---
 
-![](Images/Me.jpg){fig-align="left"}
+![](Images/Me.jpg){fig-align="left" width="209"}
 
+:::: text-justify
 ::: text-justify
-The occurrence of traumatic bone defects caused by accidents, diseases, and surgeries has become increasingly common. Consequently, there has been a noticeable increase in the overall number of bone defects reported. Treating bone defects is characterized by long treatment periods, high costs, and unpredictable outcomes, often accompanied by complications like infections and bone discontinuity. Consequently, this situation significantly impacts the physical, mental, and financial well-being of patients and poses a challenge to orthopedic surgeons. This has piqued a considerable interest in the realm of bone therapy and repair. Materials other than autogenous bone have not yet achieved the ability to offer ideal biocompatibility, osteogenesis, osteoconductivity, and osteoinduction properties simultaneously. Moreover, the scarcity of autologous bone sources has necessitated the search for new replacement materials. Metal-organic frameworks (MOFs) represent a novel class of functional materials that have gained extensive attention in the biomedical field in recent years. This is attributed to their porous nature, large specific surface area, tailorable chemistry, and their potential for drug loading. As bone treatment and repair research progresses, more investigators are exploring the potential of using MOFs for bone therapy and repair applications. Taking all these aspects into account, this chapter summarizes the current utilization of MOFs in bone therapy and regeneration, while also providing an outlook on the potential prospects of MOFs in this field.\
+Abstract
 :::
+
+The occurrence of traumatic bone defects caused by accidents, diseases, and surgeries has become increasingly common. Consequently, there has been a noticeable increase in the overall number of bone defects reported. Treating bone defects is characterized by long treatment periods, high costs, and unpredictable outcomes, often accompanied by complications like infections and bone discontinuity. Consequently, this situation significantly impacts the physical, mental, and financial well-being of patients and poses a challenge to orthopedic surgeons. This has piqued a considerable interest in the realm of bone therapy and repair. Materials other than autogenous bone have not yet achieved the ability to offer ideal biocompatibility, osteogenesis, osteoconductivity, and osteoinduction properties simultaneously. Moreover, the scarcity of autologous bone sources has necessitated the search for new replacement materials. Metal-organic frameworks (MOFs) represent a novel class of functional materials that have gained extensive attention in the biomedical field in recent years. This is attributed to their porous nature, large specific surface area, tailorable chemistry, and their potential for drug loading. As bone treatment and repair research progresses, more investigators are exploring the potential of using MOFs for bone therapy and repair applications. Taking all these aspects into account, this chapter summarizes the current utilization of MOFs in bone therapy and regeneration, while also providing an outlook on the potential prospects of MOFs in this field.\
+::::
