--- a/Certificates.qmd
+++ b/Certificates.qmd
@@ -3,75 +3,47 @@ title: "Certificates"
 format: html
 ---
 
-::: {.slideshow-container}
-<div class="slideshow">
-
-  <div class="slide">
-    <img src="Supervise.jpg">
-  </div>
-
-  <div class="slide">
-    <img src="Machin.jpg">
-  </div>
-
-  <div class="slide">
-    <img src="Advan.jpg">
-  </div>
-
-  <div class="slide">
-    <img src="Unsup.jpg">
-  </div>
-
-  <div class="slide">
-    <img src="Supervise.jpg">
-  </div>
-
-</div>
+::: {.slideshow}
+![](Supervise.jpg)
+![](Machin.jpg)
+![](Advan.jpg)
+![](Unsup.jpg)
 :::
 
 <style>
-/* LARGE slideshow container */
 .slideshow {
   position: relative;
-  width: 900px;    /* large width */
-  height: 650px;   /* large height */
+  width: 600px;      /* smaller width */
+  height: 450px;     /* smaller height */
+  margin: auto;
   overflow: hidden;
-  margin: auto;    /* centers on page */
 }
 
-/* Each slide */
-.slide {
+/* all images stacked */
+.slideshow img {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 900px;
-  height: 650px;
-  opacity: 0;
-  animation: fade 15s infinite;  /* 5 images × 3 seconds = 15 seconds total */
-}
-
-/* Large certificate images */
-.slide img {
+  inset: 0;
   width: 100%;
   height: 100%;
-  object-fit: contain;   /* keeps certificate readable */
+  object-fit: contain;
   background: white;
-  padding: 10px;
-  border-radius: 8px;
+  padding: 6px;
+  border-radius: 6px;
+  opacity: 0;
+  animation: fadecert 12s infinite;  /* 4 images × 3s = 12s */
 }
 
-/* Animation delays for each slide */
-.slide:nth-child(1) { animation-delay: 0s; }
-.slide:nth-child(2) { animation-delay: 3s; }
-.slide:nth-child(3) { animation-delay: 6s; }
-.slide:nth-child(4) { animation-delay: 9s; }
-.slide:nth-child(5) { animation-delay: 12s; }
+/* timing (3 seconds each, with overlap so no blank) */
+.slideshow img:nth-child(1) { animation-delay: 0s; }
+.slideshow img:nth-child(2) { animation-delay: 3s; }
+.slideshow img:nth-child(3) { animation-delay: 6s; }
+.slideshow img:nth-child(4) { animation-delay: 9s; }
 
-/* Fade animation */
-@keyframes fade {
-  0% { opacity: 1; }
-  18% { opacity: 1; }
-  20% { opacity: 0; }
+@keyframes fadecert {
+  0%   { opacity: 0; }
+  5%   { opacity: 1; }   /* fade in */
+  30%  { opacity: 1; }   /* stay fully visible */
+  35%  { opacity: 0; }   /* fade out */
   100% { opacity: 0; }
 }
 </style>
