--- a/Certificates.qmd
+++ b/Certificates.qmd
@@ -3,13 +3,11 @@ title: "Certificates"
 format: html
 ---
 
-::: {.slideshow}
-![](Supervise.jpg)
-![](Machin.jpg)
-![](Advan.jpg)
-![](Unsup.jpg)
+::: slideshow
+![](Supervise.jpg) ![](Machin.jpg) ![](Advan.jpg) ![](Unsup.jpg)
 :::
 
+```{=html}
 <style>
 .slideshow {
   position: relative;
@@ -35,9 +33,9 @@ format: html
 
 /* timing (3 seconds each, with overlap so no blank) */
 .slideshow img:nth-child(1) { animation-delay: 0s; }
-.slideshow img:nth-child(2) { animation-delay: 3s; }
-.slideshow img:nth-child(3) { animation-delay: 6s; }
-.slideshow img:nth-child(4) { animation-delay: 9s; }
+.slideshow img:nth-child(2) { animation-delay: 1.5s; }
+.slideshow img:nth-child(3) { animation-delay: 4.5s; }
+.slideshow img:nth-child(4) { animation-delay: 7.5s; }
 
 @keyframes fadecert {
   0%   { opacity: 0; }
@@ -47,3 +45,4 @@ format: html
   100% { opacity: 0; }
 }
 </style>
+```
