--- a/Projects/Ad.qmd
+++ b/Projects/Ad.qmd
@@ -15,3 +15,5 @@ Abstract
 \
 This review examines the synthesis, properties, and broad-spectrum applications of electroconductive polymers (ECPs), including polyaniline, polypyrrole, polythiophene, polyphenylene, and polyacetylene. These polymers exhibit high electrical conductivity, versatility in fabrication, and compatibility with various functionalization techniques, making them particularly attractive for diverse applications. While ECPs have traditionally been used in sensors, actuators, and energy storage systems, their utility extends much further, most notably to the realm of biomedical applications. The review meticulously explores the synthesis techniques of ECPs, shedding light on both chemical and electrochemical methods, and the pivotal role that dopants and polymerization techniques play in shaping the properties of the resultant polymers. Apart from discussing the conventional applications of ECPs, the review devotes substantial attention to their groundbreaking biomedical applications, like tissue engineering, medical implants, and the creation of interfaces with biological tissues. It also underscores the future trajectory of ECP research, emphasizing the development of innovative materials and fabrication methodologies for more advanced applications. With this holistic analysis of the field, the review seeks to enhance readers'' understanding of the intrinsic properties, structural complexities, and fabrication nuances of ECPs, and inspire continued research and development in this fascinating and consequential domain of materials science.
 :::
+
+<a href="https://doi.org/10.22128/mch.2023.681.1038" target="_blank"> View Published Article </a>
