--- a/Projects/Mag.qmd
+++ b/Projects/Mag.qmd
@@ -22,3 +22,11 @@ Tissue engineering and regenerative medicine have solved numerous problems relat
 :::
 
 </div>
+
+\
+
+------------------------------------------------------------------------
+
+### 
+
+<a href="https://doi.org/10.1016/j.cis.2022.102771" target="_blank"> View Published Article </a>
