--- a/Projects.qmd
+++ b/Projects.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Projects"
+title: " Research Projects"
 toc: false
 page-layout: full
 listing:
@@ -21,5 +21,4 @@ listing:
 ```         
 ```
 
-::: listing-display
-:::
+## 
