--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ about:
 
   - icon: inbox-fill
     text: Email
-    href: "mailto:keivan.bolouri.78@gmail.com"
+    url: "mailto:keivan.bolouri.78@gmail.com"
 
   - icon: file-earmark-person
     text: CV
@@ -41,9 +41,7 @@ I enjoy building projects, exploring new tools, and applying what I learn to rea
 -   **University of California, Los Angeles (UCLA)**
 
     ::: text-justify
-
     I’m currently pursuing a B.S. in Statistics and Data Science at UCLA, where I focus on turning complex data into clear, actionable insights. Alongside core training in statistical modeling and algorithmic thinking, I’m especially interested in **statistical genetics** and **computational biology**—fields that let me explore how data can reveal the patterns and mechanisms behind biological systems.
-
     :::
 
 ------------------------------------------------------------------------
