--- a/Projects/Harness.qmd
+++ b/Projects/Harness.qmd
@@ -1,8 +1,10 @@
 ---
 title: "Harnessing the Power of Electroconductive Polymers for Breakthroughs in Tissue Engineering and Regenerative Medicine"
-subtitle: "01/09/2023"
-authors: "Mahsa Ghovvati, Keivan Bolouri, Lea Guo, Naoki Kaneko, Xuru Jin, Yi Xu, Zhidan Hua, Ying Lei"
-image: "Images/Ha.jpg"  # for listings
+description: "An in-depth review of electroconductive polymers and their transformative role in tissue engineering and regenerative medicine."
+author: "Mahsa Ghovvati, Keivan Bolouri, Lea Guo, Naoki Kaneko, Xuru Jin, Yi Xu, Zhidan Hua, Ying Lei"
+date: 2023-09-01
+categories: [Electroconductive Polymers, Tissue Engineering, Regenerative Medicine]
+image: "Images/Ha.jpg"
 ---
 
 [![](Images/Ha.jpg){fig-align="left" width="185"}](https://mch.du.ac.ir/article_335.html)
