--- a/Projects/Metal.qmd
+++ b/Projects/Metal.qmd
@@ -1,8 +1,10 @@
 ---
 title: "Metal-Organic Frameworks in Bone Regeneration"
-subtitle: "01/01/2024"
-authors: "Mahsa Ghovvati, Keivan Bolouri, Naoki Kaneko, Ehsan Nazarzadeh Zare"
-image: "Images/Me.jpg"  # for listings
+description: "An overview of metal-organic frameworks and their applications in bone regeneration and tissue engineering."
+author: "Mahsa Ghovvati, Keivan Bolouri, Naoki Kaneko, Ehsan Nazarzadeh Zare"
+date: 2024-01-01
+categories: [Biomaterials, Tissue Engineering, Regenerative Medicine]
+image: "Images/Me.jpg"
 ---
 
 ![](Images/Me.jpg){fig-align="left" width="209"}
