--- a/Projects/Metal/Metal.qmd
+++ b/Projects/Metal/Metal.qmd
@@ -7,7 +7,7 @@ categories: [Biomaterials, Tissue Engineering, Regenerative Medicine]
 image: "Me.jpg"
 ---
 
-![](Images/Me.jpg){fig-align="left" width="209"}
+![](Me.jpg){fig-align="left" width="4cm" height="4cm"}
 
 :::: text-justify
 ::: text-justify
